--- a/Includes/Estructuras/links.html
+++ b/Includes/Estructuras/links.html
@@ -16,10 +16,12 @@
 <link rel="stylesheet" href="assets/componentes/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 <link rel="stylesheet" href="assets/componentes/bootstrap-daterangepicker/daterangepicker.css">
 <link rel="stylesheet" href="assets/componentes/plugins/timepicker/bootstrap-timepicker.min.css">
+<link rel="stylesheet" href="assets/componentes/fullcalendar/dist/fullcalendar.min.css">
+<link rel="stylesheet" href="assets/componentes/fullcalendar/dist/fullcalendar.print.min.css" media="print">
 <link rel="stylesheet" href="assets/css/skins/_all-skins.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
-window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
 </script>
 <script src="assets/js/modernizr.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
@@ -52,7 +54,7 @@ window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\
 <link rel="stylesheet" href="../assets/css/skins/_all-skins.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
-window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
 </script>
 <script src="../assets/js/modernizr.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
