--- a/Includes/Estructuras/links.html
+++ b/Includes/Estructuras/links.html
@@ -59,3 +59,37 @@ window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\
 <script src="../assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="../assets/js/main.js"></script>
 <script src="../assets/js/sweet-alert.min.js"></script>
+
+
+
+
+
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="Shortcut Icon" type="image/x-icon" href="../../assets/imagenes/icons/book.ico" />
+<link rel="stylesheet" href="../../assets/css/sweet-alert.css">
+<link rel="stylesheet" href="../../assets/css/normalize.css">
+<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/css/jquery.mCustomScrollbar.css">
+<link rel="stylesheet" href="../../assets/css/style.css">
+<link rel="stylesheet" href="../../assets/componentes/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../../assets/componentes/Ionicons/css/ionicons.min.css">
+<link rel="stylesheet" href="../../assets/css/AdminLTE.min.css">
+<link rel="stylesheet" href="../../assets/css/material-design-iconic-font.min.css">
+<link rel="stylesheet" href="../../assets/componentes/jvectormap/jquery-jvectormap.css">
+<link rel="stylesheet" href="../../assets/componentes/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+<link rel="stylesheet" href="../../assets/componentes/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+<link rel="stylesheet" href="../../assets/componentes/bootstrap-daterangepicker/daterangepicker.css">
+<link rel="stylesheet" href="../../assets/componentes/plugins/timepicker/bootstrap-timepicker.min.css">
+<link rel="stylesheet" href="../../assets/css/skins/_all-skins.min.css">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>
+window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
+</script>
+<script src="../../assets/js/modernizr.js"></script>
+<script src="../../assets/js/bootstrap.min.js"></script>
+<script src="../../assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="../../assets/js/main.js"></script>
+<script src="../../assets/js/sweet-alert.min.js"></script>
