--- a/Includes/Estructuras/links.html
+++ b/Includes/Estructuras/links.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="assets/componentes/fullcalendar/dist/fullcalendar.min.css">
 <link rel="stylesheet" href="assets/componentes/fullcalendar/dist/fullcalendar.print.min.css" media="print">
 <link rel="stylesheet" href="assets/css/skins/_all-skins.min.css">
+<link rel="stylesheet" type="text/css" href="Assets/clock/dist/bootstrap-clockpicker.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
     window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
@@ -88,7 +89,7 @@
 <link rel="stylesheet" href="../../assets/css/skins/_all-skins.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
-window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="assets/js/jquery-1.11.2.min.js"><\/script>')
 </script>
 <script src="../../assets/js/modernizr.js"></script>
 <script src="../../assets/js/bootstrap.min.js"></script>
