--- a/Includes/Estructuras/links.html
+++ b/Includes/Estructuras/links.html
@@ -139,4 +139,4 @@
 <script src="../../assets/js/bootstrap.min.js"></script>
 <script src="../../assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="../../assets/js/main.js"></script>
-<script src="../../../assets/js/sweet-alert.min.js"></script>
+<script src="../../assets/js/sweet-alert.min.js"></script>
